Cambio en la estructura del articulo